--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -1,1 +1,32 @@
-<p>login works!</p>
+<div class="container">
+  <div class="row flex justify-content-center align-items-center h-100">
+    <div class="col-md-6 card">
+      <div class="card-body">
+        <h1 class="mb-3">Login</h1>
+        <div class="form-group">
+          <label for="login-email-input">Username</label>
+          <input
+            type="email"
+            class="form-control"
+            id="login-email-input"
+            [value]="username"
+            (input)="onUsernameChange($event.target.value)"
+          />
+        </div>
+        <div class="form-group">
+          <label for="login-password-input">Password</label>
+          <input
+            type="password"
+            class="form-control"
+            id="login-password-input"
+            [value]="password"
+            (input)="onPasswordChange($event.target.value)"
+          />
+        </div>
+        <button type="submit" class="btn btn-primary" (click)="onSubmitClick()">
+          Submit
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
