--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -6,6 +6,7 @@
         <div class="form-group">
           <label for="login-email-input">Username</label>
           <input
+            data-testid="login-username-field"
             type="email"
             class="form-control"
             id="login-email-input"
@@ -16,6 +17,7 @@
         <div class="form-group">
           <label for="login-password-input">Password</label>
           <input
+            data-testid="login-password-field"
             type="password"
             class="form-control"
             id="login-password-input"
@@ -23,7 +25,12 @@
             (input)="onPasswordChange($event.target.value)"
           />
         </div>
-        <button type="submit" class="btn btn-primary" (click)="onSubmitClick()">
+        <button
+          data-testid="login-login-button"
+          type="submit"
+          class="btn btn-primary"
+          (click)="onSubmitClick()"
+        >
           Submit
         </button>
       </div>
