--- a/src/app/modules/main/modules/apartment/pages/list/list.component.html
+++ b/src/app/modules/main/modules/apartment/pages/list/list.component.html
@@ -9,7 +9,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let apartment of apartments; index as i">
+    <tr *ngFor="let apartment of (apartments$ | async); index as i">
       <th scope="row">{{ i + 1 }}</th>
       <td>{{ apartment.title }}</td>
       <td>{{ apartment.type }}</td>
