--- a/src/app/shared/components/form-fields/input-field/input-field.component.html
+++ b/src/app/shared/components/form-fields/input-field/input-field.component.html
@@ -3,6 +3,7 @@
   <input
     [id]="id"
     [type]="type"
+    [attr.data-testid]="testId"
     class="form-control"
     [class.is-invalid]="error"
     [value]="value"
